# utvm_staticrt_codegen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml  ci_custom.yml  style.yml
cmake/: LinkTVM.cmake  lint.cmake
examples/: codegen.py  compiler_ext.py  compiler_riscv.py  run_flow.sh  run_flow_customs.sh  utvm_gen_graph_and_params.py
examples/data/: model_with_add.tflite  model_with_add2.tflite  sine_model.tflite
examples/target_src/: CMakeLists.txt  CMakeLists.txt.new  main.c  tvm_wrapper.h
examples/target_src/aot_runtime/: CMakeLists.txt
examples/target_src/cmake/: LinkTFLite.cmake
examples/target_src/graph_runtime/: CMakeLists.txt
examples/target_src/lib/tflite_wrapper/: CMakeLists.txt  tflite_wrapper.cc
examples/target_src/static_runtime/: CMakeLists.txt
src/: CodeGen.cpp  CodeGen.h  TVMInfoExtraction.c  TVMInfoExtraction.h  main.cpp
tvm_patches/: 0001-rtfix.patch  0002-micro-config.patch  0002-utvm-build-fix.patch  0003-micro-config.patch  0003-round-support.patch  0004-round-support.patch  0004-tflite-frontend-custom_convert_map.patch  0005-tflite-frontend-ccompiler-regions.patch  0006-micro-config-debug.patch  0007-add-tflite-extern-tvm-op.patch  0008-crt-packed-func-support.patch
