CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
PROJECT(example_target_src)

INCLUDE(../../cmake/LinkTVM.cmake)

# Enable DBGPRINTF() in DEBUG mode (`cmake -DCMAKE_BUILD_TYPE=Debug ..`)
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG")

SET(OUT_DIR
    ${PROJECT_SOURCE_DIR}/../out/
)

FILE(GLOB KERNEL_SRCS
     ${OUT_DIR}/kernels*.c
)

SET(COMMON_SRCS
    ${PROJECT_SOURCE_DIR}/main.c
    ${KERNEL_SRCS}
)

IF(TFLITE_FALLBACK)
    ADD_DEFINITIONS(-DUSE_TFLITE_FALLBACK)
ENDIF()

ADD_SUBDIRECTORY(static_runtime)
ADD_SUBDIRECTORY(graph_runtime)

