CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
PROJECT(example_target_src)

INCLUDE(../../cmake/LinkTVM.cmake)

# Enable DBGPRINTF() in DEBUG mode (`cmake -DCMAKE_BUILD_TYPE=Debug ..`)
SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG -DTVMCG_DEBUG_ALLOCATIONS")
SET(CMAKE_C_FLAGS_DEBUG
    "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG -DTVMCG_DEBUG_ALLOCATIONS")

ADD_EXECUTABLE(${PROJECT_NAME}
    main.c
    ../out/kernels.c
    ../out/staticrt.c
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC tvm_static_rt)
